--- a/doc/man/bitcoinx-tx.1
+++ b/doc/man/bitcoinx-tx.1
@@ -112,7 +112,7 @@ set=NAME:JSON\-STRING
 .IP
 Set register NAME to given JSON\-STRING
 .SH COPYRIGHT
-Copyright (C) 2009-2017 The BitcoinX Core developers
+Copyright (C) 2017 The BitcoinX Core developers
 
 Please contribute if you find BitcoinX Core useful. Visit
 <https://bitcoinxcore.org> for further information about the software.
